--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
         "d:\\Libraries\\Downloads\\EvalEx-3.1.2.jar",
-        "c:\\Users\\Yoga L13\\Downloads\\EvalEx-3.1.2.jar"
+        "c:\\Users\\Yoga L13\\Downloads\\EvalEx-3.1.2.jar",
+        "d:\\Libraries\\Documents\\mXparser\\MathParser.org-mXparser\\CURRENT\\java\\src-jar-build\\MathParser.org-mXparser.jar"
     ]
 }
