Interpolación de Lagrange

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "lib/**/*.jar",
         "d:\\Libraries\\Downloads\\EvalEx-3.1.2.jar",
         "c:\\Users\\Yoga L13\\Downloads\\EvalEx-3.1.2.jar",
-        "d:\\Libraries\\Documents\\mXparser\\MathParser.org-mXparser\\CURRENT\\java\\src-jar-build\\MathParser.org-mXparser.jar"
+        "d:\\Libraries\\Documents\\mXparser\\MathParser.org-mXparser\\CURRENT\\java\\src-jar-build\\MathParser.org-mXparser.jar",
+        "c:\\Users\\Yoga L13\\Documents\\School\\S4\\MN - Métodos Numéricos\\jep-2.4.1 (2).jar"
     ]
 }
